--- a/.classpath
+++ b/.classpath
@@ -38,5 +38,6 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container/kr.scg.sws"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
